# git-c-rs

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  git-clown.rs  https.rs  lib.rs  main.rs  ssh.rs  tests.rs
src/bins/: git-c.rs
