[package]
name = "git-clown"
version = "0.1.0"
authors = ["lihram"]
edition = "2018"
description = """
Structure your git repositories differently using git-clown.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
argh = "0.1.3"
dirs = "2.0.2"
