[package]
name = "git-c"
version = "0.1.0"
authors = ["Hilmar Gústafsson"]
edition = "2018"
license = "MIT"
description = """
The maniacal git clone wrapper.
"""
repository = "https://github.com/lihram/git-c-rs"
readme = "README.md"
keywords = ["git", "organize", "clone"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
url = "2.3.1"
dirs = "5.0.1"
pom = "3.2.0"

[[bin]]
name = "git-c"
path = "src/bin/git-c.rs"
